<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">阳光厨房</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="load_end">完成加载</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="image_desc">图片</string>
    <string name ="jiantou">&#8594;</string>
    
    <string name="tab_home">"首页"</string>
    <string name="tab_nearby">"周边"</string>
    <string name="tab_search">"搜索"</string>
    <string name="tab_my">"我的"</string>
    <string name="tab_more">"更多"</string>

    <string name="back">"返回"</string>
    <string name="help">"帮助"</string>
    <string name="exit">"退出"</string>

    <string name="fragment_home_text">"这是首页"</string>
    <string name="fragment_nearby_text">"这是附近"</string>
    <string name="fragment_search_text">"这是收索"</string>
    <string name="fragment_my_text">"这是我的"</string>
    <string name="fragment_more_text">"这是更多"</string>
    
    <string name="brand">品牌商家</string>
    <string name="scanning">扫一扫</string>
    <string name="buffet">自助</string>
    <string name="liaoli">料理</string>
    <string name="video_surveillance">视频</string>
    <string name="enterprise">企业用户</string>
    <string name="complaint">投诉</string>
    <string name="more">更多</string>
    
    
     <string name="yes">&#160;是</string>
     <string name="no">&#160;否</string>
     <string name="donot_know">&#160;不知道</string>
  
    
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_nukwon">未知错误，请稍后重试！</string>
    <string name="no_result">该路线暂无提供</string>

    <string name="intro">常言道：“宁吃水里一两，莫啃地上一斤”。黄鳝，我国自古以来就将它列为鱼中上品。据《本草纲目》记载，黄鳝肉性味甘、温，有补血、补气、消炎、除风湿治虚损等功效。民间用以入药，可治疗虚劳咳嗽、湿热身痒、肠风痔漏、耳聋等症。 亦有人说“黄鳝是眼药”，过去患眼疾的人都知道吃黄鳝有好处。常吃黄鳝有很强的补益功能，特别对身体虚弱，病后以及产后之人更为明显。都说“小暑黄鳝赛人参”，而讲究食补、会吃善吃的广州人认为，黄鳝进补春夏秋冬都相宜：“春吃鳝鱼补肝脾”， “夏令之补黄鳝为首”， “立秋黄鳝最养生 ” ，“冬来黄鳝好暖身”。在广州，四季都能吃到美味的黄鳝，且吃法多种多样，但凡你想得出的烹法，都能做出美味的鳝肴。若要说一个大家都喜欢又上座率最高的鳝肴，那定属“饭中之王”的“黄鳝饭”。黄鳝饭是广东传统美食,以五邑地区的台山、新会、开平最为有名,但最受食家追捧的乃是发源之地的台山黄鳝饭。
</string>
    <string name="password_char">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="about">用户可以在此平台上查询餐厅的厨房卫生实况,卫生评级等餐饮健康信息,安心饮食,健康消费!</string>
    <string name="about_info">阳光厨房通过网站和移动客户端为广大用户提供餐厅,学校食堂,企业食堂厨房实况卫生查询服务,同时提供餐厅,学校食堂,企业食堂大宗食材来源查看,真正为社会公众提供了健康饮食的保障。</string>
</resources>
